# grustings

./: Cargo.toml  README.md
db/: db.sqlite  db.sqlite-shm
migrations/20160720150332_create_tasks_table/: down.sql  up.sql
migrations/20310621111632_create_tables copy/: down.sql  up.sql
src/: chat.rs  conversation.rs  main.rs  session.rs  users.rs
static/: index.html.tera  login.html.tera  message.html.tera  session.html.tera
static/chat/: index.html  script.js
static/css/: normalize.css  sidenav.css
