[package]
name = "todo"
version = "0.0.0"
#workspace = "../"
edition = "2018"
publish = false

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
diesel = {version = "1.3", features = ["sqlite","r2d2"]}
diesel_migrations = "1.3"
rocket = {version="0.5.0-rc.1", features=["secrets"]}

[dev-dependencies]
parking_lot = "0.11"
rand = "0.8"

[dependencies.rocket_sync_db_pools]
#path = "../../contrib/sync_db_pools/lib/"
features = ["diesel_sqlite_pool"]
version = "0.1.0-rc.1"

[dependencies.rocket_dyn_templates]
#path = "../../contrib/dyn_templates"
features = ["tera"]
version = "0.1.0-rc.1"

[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled"]